--- a/assets/css/merci.css
+++ b/assets/css/merci.css
@@ -9,6 +9,7 @@
       margin: 0;
       text-align: center;
       color: #333;
+      list-style: none;
     }
 
     h1 {
@@ -22,7 +23,12 @@
       margin-bottom: 2rem;
     }
 
-    a {
+    .number {
+      color: black;
+      text-decoration: underline;
+    }
+
+    .btn-acc {
       display: inline-block;
       padding: 0.8rem 1.5rem;
       background-color: #007bff;
