--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -84,7 +84,7 @@ header {
 
 .contact:hover {
   background-color: var(--color-trigger-alter);
-  color: var(--color-text-alter);
+  color: var(--color-text-hover);
 }
 
 /* ---------------- MENU BURGER ---------------- */
