ajustement couleur texte pour accessibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,9 +6,9 @@
   --color-bg-main: white;
   --color-bg-alter: #E6E6E6;
   --color-text-main: black;
-  --color-text-alter: #E6E6E6;
+  --color-text-alter: white;
   --color-text-hover: white;
-  --color-trigger-main: #3977EB;
+  --color-trigger-main: #3672E0;
   --color-trigger-alter: #0e365d;
 }
 
