ajustement après wave

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -458,6 +458,13 @@ h4 {
     color: var(--color-text-hover);
 }
 
+.visually-hidden {
+  position: absolute !important;
+  height: 1px; width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+  white-space: nowrap;
+}
 
 
 /* FOOTER-------------------------------- */
