--- a/assets/css/merci.css
+++ b/assets/css/merci.css
@@ -1,43 +1,43 @@
- body {
-      font-family: 'Arial', sans-serif;
-      background: #f8f9fa;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
-      color: #333;
-      list-style: none;
-    }
+body {
+  font-family: "Arial", sans-serif;
+  background: #f8f9fa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  text-align: center;
+  color: #333;
+  list-style: none;
+}
 
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-      color: #2c3e50;
-    }
+h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  color: #2c3e50;
+}
 
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-    }
+p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
 
-    .number {
-      color: black;
-      text-decoration: underline;
-    }
+.number {
+  color: black;
+  text-decoration: underline;
+}
 
-    .btn-acc {
-      display: inline-block;
-      padding: 0.8rem 1.5rem;
-      background-color: #007bff;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
+.btn-acc {
+  display: inline-block;
+  padding: 0.8rem 1.5rem;
+  background-color: #3672e0;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
 
-    a:hover {
-      background-color: #0056b3;
-    }
+a:hover {
+  background-color: #0e365d;
+}
